@@ -1,106 +1,134 @@
 package com.ems.ems.serviceImpl;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.CachePut;
 import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.ems.ems.configs.CacheNames;
 import com.ems.ems.dtos.DepartmentDto;
 import com.ems.ems.entities.Department;
-import com.ems.ems.exceptions.DuplicateResourceException;
 import com.ems.ems.exceptions.ResourceNotFoundException;
 import com.ems.ems.repositories.DepartmentRepository;
 import com.ems.ems.services.DepartmentService;
 
-import lombok.RequiredArgsConstructor;
-
 @Service
-@RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class DepartmentServiceImpl implements DepartmentService {
 
     private static final Logger log = LoggerFactory.getLogger(DepartmentServiceImpl.class);
 
     private final DepartmentRepository departmentRepository;
 
+    public DepartmentServiceImpl(DepartmentRepository departmentRepository) {
+        this.departmentRepository = departmentRepository;
+    }
+
     @Override
     @Transactional
-    @CacheEvict(value = "departments", allEntries = true)
+    @Caching(
+        put   = { @CachePut (value = CacheNames.DEPARTMENT,      key = "#result.id") },
+        evict = { @CacheEvict(value = CacheNames.DEPARTMENT_LIST, allEntries = true) }
+    )
     public DepartmentDto createDepartment(DepartmentDto dto) {
-        if (departmentRepository.existsByName(dto.getName())) {
-            throw new DuplicateResourceException("Department", "name", dto.getName());
+        Objects.requireNonNull(dto, "DepartmentDto must not be null");
+        log.debug("Creating department name={}", dto.getName());
+
+        if (departmentRepository.existsByNameIgnoreCase(dto.getName())) {
+            throw new IllegalArgumentException(
+                    "Department already exists with name: " + dto.getName());
         }
 
-        Department department = new Department();
-        department.setName(dto.getName());
-        department.setDescription(dto.getDescription());
+        Department saved = departmentRepository.save(
+                new Department(dto.getName(), dto.getDescription()));
 
-        Department saved = departmentRepository.save(department);
-        log.info("Created department with id: {}", saved.getId());
-        return mapToDto(saved);
+        log.info("Created department id={} name={}", saved.getId(), saved.getName());
+        return toDto(saved);
     }
 
     @Override
-    @Cacheable(value = "department", key = "#id")
+    @Cacheable(value = CacheNames.DEPARTMENT, key = "#id")
     public DepartmentDto getDepartmentById(Long id) {
-        log.debug("Fetching department with id: {}", id);
+        Objects.requireNonNull(id, "Department id must not be null");
+        log.debug("Fetching department id={}", id);
+
         Department department = departmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Department", "id", id));
-        return mapToDto(department);
+                .orElseThrow(() -> ResourceNotFoundException.forResource("Department", id));
+        return toDto(department);
     }
 
     @Override
-    @Cacheable(value = "departments")
+    @Cacheable(value = CacheNames.DEPARTMENT_LIST, key = "'all'")
     public List<DepartmentDto> getAllDepartments() {
         log.debug("Fetching all departments");
-        return departmentRepository.findAll()
-                .stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+        return departmentRepository.findAll().stream()
+                .map(this::toDto)
+                .toList();
     }
 
     @Override
     @Transactional
-    @CachePut(value = "department", key = "#id")
-    @CacheEvict(value = "departments", allEntries = true)
+    @Caching(
+        put   = { @CachePut (value = CacheNames.DEPARTMENT,      key = "#id") },
+        evict = { @CacheEvict(value = CacheNames.DEPARTMENT_LIST, allEntries = true) }
+    )
     public DepartmentDto updateDepartment(Long id, DepartmentDto dto) {
-        Department department = departmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Department", "id", id));
+        Objects.requireNonNull(id,  "Department id must not be null");
+        Objects.requireNonNull(dto, "DepartmentDto must not be null");
+        log.debug("Updating department id={}", id);
 
-        if (!department.getName().equals(dto.getName())
-                && departmentRepository.existsByName(dto.getName())) {
-            throw new DuplicateResourceException("Department", "name", dto.getName());
+        Department department = departmentRepository.findById(id)
+                .orElseThrow(() -> ResourceNotFoundException.forResource("Department", id));
+
+        // Guard against renaming into an existing department's name.
+        if (!department.getName().equalsIgnoreCase(dto.getName())
+                && departmentRepository.existsByNameIgnoreCase(dto.getName())) {
+            throw new IllegalArgumentException(
+                    "Department already exists with name: " + dto.getName());
         }
 
         department.setName(dto.getName());
         department.setDescription(dto.getDescription());
 
-        Department updated = departmentRepository.save(department);
-        log.info("Updated department with id: {}", id);
-        return mapToDto(updated);
+        // Managed entity — JPA dirty checking flushes at commit.
+        log.info("Updated department id={}", id);
+        return toDto(department);
     }
 
     @Override
     @Transactional
-    @CacheEvict(value = {"department", "departments"}, allEntries = true)
+    @Caching(evict = {
+        @CacheEvict(value = CacheNames.DEPARTMENT,      key = "#id"),
+        @CacheEvict(value = CacheNames.DEPARTMENT_LIST, allEntries = true)
+    })
     public void deleteDepartment(Long id) {
-        Department department = departmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Department", "id", id));
-        departmentRepository.delete(department);
-        log.info("Deleted department with id: {}", id);
+        Objects.requireNonNull(id, "Department id must not be null");
+        log.debug("Deleting department id={}", id);
+
+        if (!departmentRepository.existsById(id)) {
+            throw ResourceNotFoundException.forResource("Department", id);
+        }
+        departmentRepository.deleteById(id);
+        log.info("Deleted department id={}", id);
     }
 
-    private DepartmentDto mapToDto(Department d) {
-        return DepartmentDto.builder()
-                .id(d.getId())
-                .name(d.getName())
-                .description(d.getDescription())
-                .employeeCount(d.getEmployees() != null ? d.getEmployees().size() : 0)
-                .build();
+    // ───────────────────── mapping helpers ─────────────────────
+
+    private DepartmentDto toDto(Department entity) {
+        DepartmentDto dto = new DepartmentDto();
+        dto.setId(entity.getId());
+        dto.setName(entity.getName());
+        dto.setDescription(entity.getDescription());
+        // NOTE: N+1 risk inside getAllDepartments(). Consider a projection
+        // query that returns (id, name, description, employeeCount) in one hit.
+        dto.setEmployeeCount(entity.getEmployees() != null ? entity.getEmployees().size() : 0);
+        return dto;
     }
 }
